# ml-ops-part-3

./: Dockerfile  README  compose.yml  requirements.txt
ml_pipeline/: __init__.py  pyproject.toml
ml_pipeline/assets/: data.py
ml_pipeline/config/: pipeline_config.py
ml_pipeline/io_managers/: lakefs_io_manager.py
ml_pipeline/resources/: mlflow_resource.py
