project]
name = "ml_pipeline"
version = "0.1.0"
description = "MLOps pipeline with Dagster and LakeFS"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ml_pipeline"]

[tool.dagster]
module_name = "ml_pipeline"  # Points to your __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"